[workspace]
members = ["crates/rdt"]
resolver = "2"

[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Felix Koppe <hi@flxkpe.io>"]
license = "MIT"
repository = "https://github.com/chwzr/rdt"
description = "Replicated Data Types - A High Performance Sync Framework"
readme = "README.md"