[package]
name = "rdt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Replicated Data Types - Single Source of Truth State synchronization framework"

[features]
default = ["persistence", "axum"]
persistence = []
axum = ["dep:axum", "tokio-tungstenite", "futures-util", "tower"]

[dependencies]
# Core dependencies
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
lib0 = "0.16.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2.0"

# Feature Axum integration
axum = { version = "0.8", features = ["ws"], optional = true }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
tower = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
rstest = "0.23" 